# T4X-GUI2

./: .gitignore  Doxyfile
VSCODE_WSL_devel/src/: TextureLoader.cpp  game.cpp  main.cpp
VSCODE_WSL_devel/src/headers/: TextureLoader.h  game.h
VS_WIN_devel/: BaseMap.h  Camera.cpp  Camera.h  GameControl.cpp  GameControl.h  GlewLoader.cpp  GlewLoader.h  HeightMap.h  ImguiUtils.h  MainController.cpp  MainController.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  Menus.cpp  Menus.h  ShaderManager.cpp  ShaderManager.h  T4X.cpp  TempMap.h  TileMap.h  UnitMain.cpp  VBOWrapper.cpp  VBOWrapper.h  WaterMap.h  cool_penninsula.txt  imgui.h  imgui.ini  reformat2.txt
VS_WIN_devel/docs/: reformat1.txt
VS_WIN_devel/enc_temp_folder/2a5c4a2940a7a9794859418044744dcf/: TempMap.h
VS_WIN_devel/enc_temp_folder/a0ac2268519adfe478d3c8aef7a22f33/: Map.cpp
VS_WIN_devel/enc_temp_folder/fe13b9bd2ea6d036b65d7c97cec82a96/: Map.cpp
VS_WIN_devel/lib/imgui/: imgui_widgets.cpp
VS_WIN_devel/resources/: mainvert.glvs  mapgeom.glgs  mapvert.glvs  texturedfrag.glfs  untexturedfrag.glfs  untexturedvert.glvs
VS_WIN_devel/x64/Debug/: CodeAnalysisResultManifest.txt  T4X.exe.recipe  camera.obj.enc  frag.glfs  gamecontrol.obj.enc  imgui.ini  maincontroller.obj.enc  mainwindow.obj.enc  map.obj.enc  shadermanager.obj.enc  t4x.obj.enc  vc143.idb  vert.glvs
VS_WIN_devel/x64/Debug/T4X.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyFile.command.1.tlog  CopyFile.read.1.tlog  CopyFile.write.1.tlog  T4X.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
VS_WIN_devel/x64/Release/: T4X.exe.recipe  T4X.ipdb
VS_WIN_devel/x64/Release/T4X.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  T4X.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
docs/: .spec.ctb~  .spec.ctb~~  .spec.ctb~~~  docs.rtf  spec.ctb
native_dev/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  cmake  cmake_install.cmake  copy_rsc.ps1  required_shaders_list.txt  run.sh
native_dev/include/: RenderObject.h  Renderer.h  ShapeObject.h  Vector.h
native_dev/include/RenderObjects/: RenderObject.h  ShapeObject.h  TileObject.h
native_dev/include/T4X/: Utils.h
native_dev/include/T4X/game/: GameManager.h
native_dev/include/T4X/game/map/: Map.h
native_dev/include/T4X/input/: Event.h  InputManager.h
native_dev/include/T4X/render/: Camera.h  Renderer.h  Shader.h
native_dev/include/T4X/render/Menus/: Menus.h
native_dev/include/T4X/render/RenderObjects/: MeshObject.h  RenderObject.h  TestObject.h  TexturedObject.h
native_dev/include/T4X/render/RenderObjects/WorldObjects/: MeshObject.h  TestObject.h  WorldObject.h
native_dev/include/T4X/render/Textures/: DataTexture.h  ImageTexture.h
native_dev/include/game/: GameManager.h
native_dev/include/imgui/: imgui_internal.h
native_dev/include/input/: InputManager.h
native_dev/include/lin/SDL2/: SDL_config.h  SDL_revision.h
native_dev/include/local/T4X/game/map/: Map.h
native_dev/include/local/T4X/input/: Event.h  InputManager.h
native_dev/include/local/T4X/render/: Renderer.h  Texture.h
native_dev/include/local/T4X/render/Menus/: Menus.h
native_dev/include/local/T4X/render/RenderObjects/WorldObjects/: TestObject.h  WorldObject.h
native_dev/include/local/T4X/render/Textures/: ImageTexture.h
native_dev/include/render/: Camera.h  Renderer.h  Shader.h  ShaderManager.h  Texture.h
native_dev/include/render/RenderObjects/: MeshObject.h  RenderObject.h  ShapeObject.h  TexturedObject.h  TileObject.h
native_dev/include/shared/imgui/: imgui.h
native_dev/lib/LINUX/SDL2/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
native_dev/lib/LINUX/SDL2/lib/cmake/SDL2/: sdl2-config.cmake
native_dev/lib/LINUX/SDL2/lib/pkgconfig/: sdl2.pc
native_dev/lib/WIN/FastNoise2/: NoiseTool.ini
native_dev/lib/WIN/glew-2.2.0/x64/: glewinfo.txt
native_dev/lib/glew/lib/pkgconfig/: glew.pc
native_dev/lib/glew/lib64/: libGLEW.so.2.2.0
native_dev/resources/: basefrag.glfs  basevert.glvs
native_dev/resources/basic_shader/: basefrag.glfs  basevert.glvs
native_dev/resources/basic_shaders/: basevert.glvs
native_dev/resources/mesh_shader/: meshfrag.glfs  meshtsc.glts  meshtsc.tesc  meshtse.glts  meshtse.tese  meshvert.glvs
native_dev/resources/textured_shader/: texturefrag.glfs  texturegeom.glgs  texturevert.glvs
native_dev/resources/textured_shaders/: texturefrag.glfs  texturegeom.glgs
native_dev/resources/tiled_shaders/: tilefrag.glfs  tilegeom.glgs  tilevert.glvs
native_dev/src/: main.cpp
native_dev/src/PNG/: lodepng.cpp
native_dev/src/game/: GameManager.cpp
native_dev/src/game/map/: Map.cpp
native_dev/src/imgui_impl/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_widgets.cpp
native_dev/src/input/: InputManager.cpp
native_dev/src/render/: Camera.cpp  RenderObject.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  ShapeObject.cpp  Texture.cpp  rendering.cpp  rendering.h
native_dev/src/render/RenderObjects/: MeshObject.cpp  RenderObject.cpp  ShapeObject.cpp  TestObject.cpp  TexturedObject.cpp  TileObject.cpp  TiledObject.cpp
native_dev/src/render/RenderObjects/WorldObjects/: MeshObject.cpp  TestObject.cpp
native_dev/src/render/Textures/: DataTexture.cpp  ImageTexture.cpp
src/: SurfaceLoader.cpp  game.cpp  main.cpp
src/headers/: SurfaceLoader.h  game.h
vs_dev/: BaseMap.h  Camera.cpp  Camera.h  EventManager.h  GameControl.h  HeightMap.h  ImguiUtils.h  Logger.h  MainController.cpp  MainController.h  Map.cpp  Map.h  MapDebug.h  MenuDesign.txt  MenuHandler.cpp  MenuHandler.h  Menus.h  RCa07532  TempMap.h  UnitMain.cpp  WaterMap.h  dc.txt  imgui.ini  imgui_demo.cpp  imgui_impl_opengl3.cpp  resource.h  test.txt
vs_dev/resources/: mapgeom.glgs  mapvert.glvs  texturedvert.glvs
